--- a/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -1656,12 +1656,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the the number of inputs (features) to the model\n",
-    "number_input_features = # YOUR CODE HERE\n",
+    "number_input_features = 2\n",
     "\n",
     "# Review the number of features\n",
     "number_input_features\n"
@@ -1669,22 +1680,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the number of neurons in the output layer\n",
-    "number_output_neurons = # YOUR CODE HERE"
+    "number_output_neurons = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the first hidden layer\n",
-    "hidden_nodes_layer1 =  # YOUR CODE HERE\n",
+    "hidden_nodes_layer1 =  2\n",
     "\n",
     "# Review the number hidden nodes in the first layer\n",
     "hidden_nodes_layer1\n"
@@ -1692,12 +1714,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Define the number of hidden nodes for the second hidden layer\n",
-    "hidden_nodes_layer2 =  # YOUR CODE HERE\n",
+    "hidden_nodes_layer2 =  3\n",
     "\n",
     "# Review the number hidden nodes in the second layer\n",
     "hidden_nodes_layer2\n"
@@ -1705,52 +1738,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Sequential model instance\n",
-    "nn = # YOUR CODE HERE\n"
+    "nn = Sequential()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the first hidden layer\n",
-    "# YOUR CODE HERE\n"
+    "nn.add(Dense(units=hidden_nodes_layer1, input_dim=number_input_features, activation=\"relu\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the second hidden layer\n",
-    "# YOUR CODE HERE\n"
+    "nn.add(Dense(units=hidden_nodes_layer2, activation=\"relu\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add the output layer to the model specifying the number of output neurons and activation function\n",
-    "# YOUR CODE HERE\n"
+    "nn.add(Dense(1, activation=\"sigmoid\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 2)                 6         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 3)                 9         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 1)                 4         \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 1)                 2         \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 21\n",
+      "Trainable params: 21\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Display the Sequential model summary\n",
-    "# YOUR CODE HERE\n"
+    "nn.summary()\n"
    ]
   },
   {
@@ -1762,22 +1819,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Compile the Sequential model\n",
-    "# YOUR CODE HERE\n"
+    "nn.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "804/804 [==============================] - 4s 2ms/step - loss: 0.6926 - accuracy: 0.5335\n",
+      "Epoch 2/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "Epoch 3/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "Epoch 4/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "Epoch 5/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "Epoch 6/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "Epoch 7/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "Epoch 8/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6910 - accuracy: 0.5335\n",
+      "Epoch 9/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6909 - accuracy: 0.5335\n",
+      "Epoch 10/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6909 - accuracy: 0.5337: 0s - loss: 0.6909 - accu\n",
+      "Epoch 11/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6909 - accuracy: 0.5339\n",
+      "Epoch 12/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6909 - accuracy: 0.5340\n",
+      "Epoch 13/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6908 - accuracy: 0.5342\n",
+      "Epoch 14/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6908 - accuracy: 0.5342\n",
+      "Epoch 15/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.6908 - accuracy: 0.5345\n",
+      "Epoch 16/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.6908 - accuracy: 0.5344\n",
+      "Epoch 17/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5345\n",
+      "Epoch 18/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6908 - accuracy: 0.5346\n",
+      "Epoch 19/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6908 - accuracy: 0.5347\n",
+      "Epoch 20/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6908 - accuracy: 0.5346\n",
+      "Epoch 21/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5347\n",
+      "Epoch 22/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5345\n",
+      "Epoch 23/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5346\n",
+      "Epoch 24/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5349: 0s -\n",
+      "Epoch 25/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5351\n",
+      "Epoch 26/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5353\n",
+      "Epoch 27/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5349\n",
+      "Epoch 28/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5349\n",
+      "Epoch 29/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5350\n",
+      "Epoch 30/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5351\n",
+      "Epoch 31/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5352\n",
+      "Epoch 32/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6907 - accuracy: 0.5351: 0s - loss: 0.6905 - \n",
+      "Epoch 33/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5352\n",
+      "Epoch 34/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5353\n",
+      "Epoch 35/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5354\n",
+      "Epoch 36/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5351\n",
+      "Epoch 37/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5353\n",
+      "Epoch 38/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5351\n",
+      "Epoch 39/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5353\n",
+      "Epoch 40/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5353\n",
+      "Epoch 41/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6906 - accuracy: 0.5353\n",
+      "Epoch 42/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6905 - accuracy: 0.5354\n",
+      "Epoch 43/50\n",
+      "804/804 [==============================] - 1s 2ms/step - loss: 0.6905 - accuracy: 0.5356\n",
+      "Epoch 44/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.6905 - accuracy: 0.5355\n",
+      "Epoch 45/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.6905 - accuracy: 0.5356\n",
+      "Epoch 46/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.6905 - accuracy: 0.5360\n",
+      "Epoch 47/50\n",
+      "804/804 [==============================] - 2s 2ms/step - loss: 0.6905 - accuracy: 0.5359\n",
+      "Epoch 48/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.6904 - accuracy: 0.5358\n",
+      "Epoch 49/50\n",
+      "804/804 [==============================] - 3s 4ms/step - loss: 0.6905 - accuracy: 0.5360\n",
+      "Epoch 50/50\n",
+      "804/804 [==============================] - 2s 3ms/step - loss: 0.6904 - accuracy: 0.5363\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit the model using 50 epochs and the training data\n",
-    "# YOUR CODE HERE\n"
+    "model=nn.fit(X_train_scaled, y_train, epochs=50)\n"
    ]
   },
   {
@@ -1789,12 +1953,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "804/804 - 1s - loss: 0.6904 - accuracy: 0.5363 - 820ms/epoch - 1ms/step\n",
+      "Loss: 0.6903867125511169, Accuracy: 0.5362696051597595\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate the model loss and accuracy metrics using the evaluate method and the test data\n",
-    "model_loss, model_accuracy = # YOUR CODE HERE\n",
+    "model_loss, model_accuracy = nn.evaluate(X_train_scaled, y_train, verbose=2)\n",
     "\n",
     "# Display the model loss and accuracy results\n",
     "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
@@ -1809,15 +1982,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set the model's file path\n",
-    "file_path = # YOUR CODE HERE\n",
+    "file_path = Path('Resources/AlphabetSoup.h5')\n",
     "\n",
     "# Export your model to a HDF5 file\n",
-    "# YOUR CODE HERE\n"
+    "nn.save(file_path)\n"
    ]
   },
   {
