Updated the README file

--- a/Starter_Code/venture_funding_with_deep_learning.ipynb
+++ b/Starter_Code/venture_funding_with_deep_learning.ipynb
@@ -2572,7 +2572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -2580,7 +2580,7 @@
      "output_type": "stream",
      "text": [
       "Original Model Results\n",
-      "804/804 - 1s - loss: 0.6903 - accuracy: 0.5376 - 934ms/epoch - 1ms/step\n",
+      "804/804 - 1s - loss: 0.6903 - accuracy: 0.5376 - 801ms/epoch - 996us/step\n",
       "Loss: 0.6903157830238342, Accuracy: 0.5375913381576538\n"
      ]
     }
@@ -2597,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -2605,7 +2605,7 @@
      "output_type": "stream",
      "text": [
       "Alternative Model 1 Results\n",
-      "804/804 - 1s - loss: 0.6906 - accuracy: 0.5355 - 981ms/epoch - 1ms/step\n",
+      "804/804 - 1s - loss: 0.6906 - accuracy: 0.5355 - 778ms/epoch - 968us/step\n",
       "Loss: 0.6905868053436279, Accuracy: 0.5355310440063477\n"
      ]
     }
@@ -2622,7 +2622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -2630,8 +2630,8 @@
      "output_type": "stream",
      "text": [
       "Alternative Model 2 Results\n",
-      "804/804 - 1s - loss: 0.6905 - accuracy: 0.5355 - 1s/epoch - 2ms/step\n",
-      "Loss: 0.6905220150947571, Accuracy: 0.5355310440063477\n"
+      "804/804 - 1s - loss: 0.6908 - accuracy: 0.5346 - 737ms/epoch - 917us/step\n",
+      "Loss: 0.6907570958137512, Accuracy: 0.5345591902732849\n"
      ]
     }
    ],
@@ -2654,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2667,7 +2667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
